freemed project changelog
($Id$)

* Thu May 17 2001 fforest
  - macros added defines for covstatus ACTIVE DELETED
  - API change the coverage functions to use the above 
    instead of hard coded 0 and 1
  - patient_coverage changed to use the defines above
  - procedure_module completely re written. now uses
    wizard verification of fields. new page 2 to select
    insurance coverage. new display function.
    modform reduced to eoc, auth, voucher and comment.
  - old procedure module copied to /old

* Wed May 16 2001 fforest
  - billing_module Checkforinsbills can now take an 
    array of covtypes as a parm
  - lots of work on the new calendar stuff but admin is still
    not there. The old stuff still works:)
  - cpt.db.maint ugly bug in fee profiles while 
    running the insco list. it assumed the insco id would be
    in seqence with no gaps?
  - generate_forms now pass parms to Checkforinsbills
  - procedure module dropping proccomment
  - 
* Wed May 09 2001 rufustfirefly
  Released 0.2.1.2 (Thelonious/CVS)

* Wed May 09 2001 fforest
	- payment module needed </TABLE> in ledger function
      or netscape display a blank page (djordan)
    - unpaid_procedures module needed semicolons after &nbsp
      or netscape gets wierd  (djordan)

* Fri May 04 2001 fforest
   - add calendar.php menu.
   - main.php use Gear icon for calendar
   - lib/calendar_functions add new function get_time_string
     to make 5:5 to 05:05 AM
   - module_calendar some fixes and enhancements
   - view_calendar/admin_calendar use new function (above)
     admin now allows a day to be clicked. implement display
     method. admin still needs work but view seems ok
     view now does the javasvript popup window when
     an appointment is booked.
   
* Fri May 04 2001 rufustfirefly
  - added img/clock.gif, updated link in menu.php
  - module_information.php: added lib/module_calendar.php
    include to stop breakage

* Thu May 03 2001 fforest
   - added lib/module_calendar